--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,12 @@
 			<artifactId>cxf-spring-boot-starter-jaxws</artifactId>
 			<version>3.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-ws-security</artifactId>
+			<version>3.2.2</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
